src/v7/CAPI_Loads.pas


end;
//------------------------------------------------------------------------------
function Loads_Get_kvar():Double;cdecl;
begin
   Result := 0.0;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TLoadObj(Active).kvarBase;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
function Loads_Get_kW():Double;cdecl;
begin
   Result := 0.0;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TLoadObj(Active).kWBase;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
function Loads_Get_PF():Double;cdecl;
begin
   Result := 0.0;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TLoadObj(Active).PFNominal;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kV(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                  TLoadObj(Active).kVLoadBase := Value;
                  TLoadObj(Active).UpdateVoltageBases;  // side effects
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kvar(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                  TLoadObj(Active).kvarBase := Value;
                  TLoadObj(Active).LoadSpecType := 1;
                  TLoadObj(Active).RecalcElementData ;  // set power factor based on kW, kvar
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kW(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                  TLoadObj(Active).kWBase := Value;
                  TLoadObj(Active).LoadSpecType := 0;
                  TLoadObj(Active).RecalcElementData ; // sets kvar based on kW and pF
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_PF(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                  TLoadObj(Active).PFNominal := Value;
                  TLoadObj(Active).LoadSpecType := 0;
                  TLoadObj(Active).RecalcElementData ; //  sets kvar based on kW and pF
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
function Loads_Get_Count():Integer;cdecl;
begin
    If Assigned(ActiveCircuit) Then
       Result := ActiveCircuit.Loads.ListSize ;
end;
//------------------------------------------------------------------------------
function Loads_Get_AllocationFactor():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.AllocationFactor;
end;
//------------------------------------------------------------------------------
function Loads_Get_Cfactor():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.CFactor;
end;
//------------------------------------------------------------------------------
function Loads_Get_Class_():Integer;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.LoadClass;
end;
//------------------------------------------------------------------------------
function Loads_Get_CVRcurve_AnsiString():AnsiString;inline;
var
  elem: TLoadObj;
begin
  Result := '';
  elem := ActiveLoad;
  if elem <> nil then Result := elem.CVRshape;
end;

function Loads_Get_CVRcurve():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_CVRcurve_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_CVRvars():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.CVRvars;
end;
//------------------------------------------------------------------------------
function Loads_Get_CVRwatts():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.CVRwatts;
end;
//------------------------------------------------------------------------------
function Loads_Get_daily_AnsiString():AnsiString;inline;
var
  elem: TLoadObj;
begin
  Result := '';
  elem := ActiveLoad;
  if elem <> nil then Result := elem.DailyShape;
end;

function Loads_Get_daily():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_daily_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_duty_AnsiString():AnsiString;inline;
var
  elem: TLoadObj;
begin
  Result := '';
  elem := ActiveLoad;
  if elem <> nil then Result := elem.DailyShape;
end;

function Loads_Get_duty():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_duty_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_Growth_AnsiString():AnsiString;inline;
var
  elem: TLoadObj;
begin
  Result := '';
  elem := ActiveLoad;
  if elem <> nil then Result := elem.GrowthShape;
end;

function Loads_Get_Growth():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_Growth_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_IsDelta():WordBool;cdecl;
var
  elem: TLoadObj;
begin
  Result := FALSE;
  elem := ActiveLoad;
  if elem <> nil then if elem.Connection > 0 then Result := TRUE;
end;
//------------------------------------------------------------------------------
function Loads_Get_kva():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.kVABase;
end;
//------------------------------------------------------------------------------
function Loads_Get_kwh():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.kWh;
end;
//------------------------------------------------------------------------------
function Loads_Get_kwhdays():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.kWhDays;
end;
//------------------------------------------------------------------------------
function Loads_Get_Model():Integer;cdecl;
var
  elem: TLoadObj;
begin
  Result := dssLoadConstPQ;
  elem := ActiveLoad;
  if elem <> nil then begin
    case elem.FLoadModel of
      1: Result := dssLoadConstPQ;
      2: Result := dssLoadConstZ;
      3: Result := dssLoadMotor;
      4: Result := dssLoadCVR;
      5: Result := dssLoadConstI;
      6: Result := dssLoadConstPFixedQ;
      7: Result := dssLoadConstPFixedX;
      8: Result := dssLoadZIPV;
    end;
  end;
end;
//------------------------------------------------------------------------------
function Loads_Get_NumCust():Integer;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.NumCustomers;
end;
//------------------------------------------------------------------------------
function Loads_Get_PctMean():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.puMean * 100.0;
end;
//------------------------------------------------------------------------------
function Loads_Get_PctStdDev():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.puStdDev * 100.0;
end;
//------------------------------------------------------------------------------
function Loads_Get_Rneut():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.Rneut;
end;
//------------------------------------------------------------------------------
function Loads_Get_Spectrum_AnsiString():AnsiString;inline;
var
  elem: TLoadObj;
begin
  Result := '';
  elem := ActiveLoad;
  if elem <> nil then Result := elem.Spectrum;
end;

function Loads_Get_Spectrum():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_Spectrum_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_Status():Integer;cdecl;
var
  elem: TLoadObj;
begin
  Result := dssLoadVariable;
  elem := ActiveLoad;
  if elem <> nil then begin
    if elem.ExemptLoad then
      Result := dssLoadExempt
    else if elem.FixedLoad then
      Result := dssLoadFixed;
  end;
end;
//------------------------------------------------------------------------------
function Loads_Get_Vmaxpu():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.MaxPU;
end;
//------------------------------------------------------------------------------
function Loads_Get_Vminemerg():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.MinEmerg;
end;
//------------------------------------------------------------------------------
function Loads_Get_Vminnorm():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.MinNormal;
end;
//------------------------------------------------------------------------------
function Loads_Get_Vminpu():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.MinPU;
end;
//------------------------------------------------------------------------------
function Loads_Get_xfkVA():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.ConnectedkVA;
end;
//------------------------------------------------------------------------------
function Loads_Get_Xneut():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.Xneut;
end;
//------------------------------------------------------------------------------
function Loads_Get_Yearly_AnsiString():AnsiString;inline;
var
  elem: TLoadObj;
begin
  Result := '';
  elem := ActiveLoad;
  if elem <> nil then Result := elem.YearlyShape;
end;
